evaluate CNN regression model

--- a/0808/multimodal.ipynb
+++ b/0808/multimodal.ipynb
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,12 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1075,22 +1080,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras_preprocessing\\image\\dataframe_iterator.py:273: UserWarning: Found 57 invalid image filename(s) in x_col=\"file_path\". These filename(s) will be ignored.\n",
-      "  .format(n_invalid, x_col)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 142540 validated image filenames.\n"
+      "Found 144316 validated image filenames.\n"
      ]
     }
    ],
@@ -1099,7 +1096,7 @@
     "train_datagen = ImageDataGenerator()\n",
     "train_generator = train_datagen.flow_from_dataframe(     \n",
     "    dataframe=img_df,\n",
-    "    batch_size= 20,\n",
+    "    batch_size= 40,\n",
     "    x_col=\"file_path\", \n",
     "    y_col=\"label\",\n",
     "    target_size = (img_rows, img_cols),\n",
@@ -1116,29 +1113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0811 15:01:14.836066  9612 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n",
-      "W0811 15:01:14.846698  9612 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n",
-      "W0811 15:01:14.848215  9612 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-      "\n",
-      "W0811 15:01:14.867468  9612 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "\n",
-      "W0811 15:01:14.868468  9612 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
-      "\n",
-      "W0811 15:01:14.872468  9612 deprecation.py:506] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1146,24 +1123,28 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 596, 296, 16)      1216      \n",
+      "conv2d_7 (Conv2D)            (None, 596, 296, 64)      4864      \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 592, 292, 16)      6416      \n",
+      "conv2d_8 (Conv2D)            (None, 594, 294, 32)      18464     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 148, 73, 16)       0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 148, 73, 32)       0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 148, 73, 16)       0         \n",
+      "dropout_5 (Dropout)          (None, 148, 73, 32)       0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 172864)            0         \n",
+      "conv2d_9 (Conv2D)            (None, 144, 69, 32)       25632     \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 64)                11063360  \n",
+      "max_pooling2d_6 (MaxPooling2 (None, 72, 34, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 64)                0         \n",
+      "flatten_3 (Flatten)          (None, 78336)             0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 65        \n",
+      "dense_5 (Dense)              (None, 32)                2506784   \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 32)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_6 (Dense)              (None, 1)                 33        \n",
       "=================================================================\n",
-      "Total params: 11,071,057\n",
-      "Trainable params: 11,071,057\n",
+      "Total params: 2,555,777\n",
+      "Trainable params: 2,555,777\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1171,13 +1152,15 @@
    ],
    "source": [
     "model_CNN = Sequential()\n",
-    "model_CNN.add(Conv2D(16, kernel_size=(5, 5), activation='relu', input_shape=img_size))\n",
-    "model_CNN.add(Conv2D(16, (5, 5), activation='relu'))\n",
+    "model_CNN.add(Conv2D(64, kernel_size=(3, 3), activation='relu', input_shape=img_size))\n",
+    "model_CNN.add(Conv2D(32, (3, 3), activation='relu'))\n",
     "model_CNN.add(MaxPooling2D(pool_size=(4, 4)))\n",
     "model_CNN.add(Dropout(0.25))\n",
+    "model_CNN.add(Conv2D(32, (5, 5), activation='relu'))\n",
+    "model_CNN.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model_CNN.add(Flatten())\n",
     "\n",
-    "model_CNN.add(Dense(64, activation='relu'))\n",
+    "model_CNN.add(Dense(32, activation='relu'))\n",
     "model_CNN.add(Dropout(0.5))\n",
     "# 預測價格\n",
     "model_CNN.add(Dense(1, activation='relu'))\n",
@@ -1297,36 +1280,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0811 15:02:13.730423  9612 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-      "\n",
-      "W0811 15:02:13.853412  9612 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      " - 449s - loss: 56.5046\n",
+      "3608/3607 [==============================] - 347s 96ms/step - loss: 58.5456\n",
       "Epoch 2/3\n",
-      " - 444s - loss: 55.9459\n",
+      "3608/3607 [==============================] - 347s 96ms/step - loss: 57.7714\n",
       "Epoch 3/3\n",
-      " - 443s - loss: 54.5791\n"
+      "3608/3607 [==============================] - 346s 96ms/step - loss: 58.2046\n"
      ]
     }
    ],
    "source": [
     "model_CNN.compile(loss='mean_absolute_percentage_error', optimizer='adam')\n",
     "# train_history = model_CNN.fit(x=img_data, y=label, validation_split=0.3, epochs=10, batch_size=10, verbose=0)\n",
-    "train_history = model_CNN.fit_generator(train_generator, epochs=3, steps_per_epoch=img_df.shape[0]/ 20, verbose=2)"
+    "train_history = model_CNN.fit_generator(train_generator, epochs=3, steps_per_epoch=img_df.shape[0]/ 40, verbose=1)"
    ]
   },
   {
@@ -1721,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,6 +1739,8 @@
     "                \n",
     "        if not len(match_list) == 0:\n",
     "            test2.loc[test2['address'] == data['address'], 'imgs'] = ','.join(match_list)\n",
+    "        else:\n",
+    "            test2.loc[test2['address'] == data['address'], 'imgs'] = ''\n",
     "                \n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -1776,15 +1751,16 @@
     "label2 = []\n",
     "# 根據單一地址被交易次數與照片數，建立 train_pic list\n",
     "for i, data in test2.iterrows():\n",
-    "    train_pic.extend(data['imgs'].split(','))\n",
-    "    # 根據 testDF同地址的不同價格數目與 unique地址的圖片產生label\n",
-    "    label2.extend([data['price']]*len(data['imgs'].split(',')))\n",
-    "    area2.extend([data['area']]*len(data['imgs'].split(',')))"
+    "    if not data['imgs']=='':\n",
+    "        train_pic2.extend(data['imgs'].split(','))\n",
+    "        # 根據 testDF同地址的不同價格數目與 unique地址的圖片產生label\n",
+    "        label2.extend([data['price']]*len(data['imgs'].split(',')))\n",
+    "        area2.extend([data['area']]*len(data['imgs'].split(',')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,11 +1800,11 @@
     "            shuffle=False, \n",
     "            class_mode=\"other\")\n",
     "    \n",
-    "    data_generator = load_multi_test_data(batch_size)\n",
+    "#     data_generator = load_multi_test_data(batch_size)\n",
     "    \n",
     "    while True:\n",
     "            X1i = genX1.next()\n",
-    "            X2i = next(data_generator)\n",
+    "#             X2i = next(data_generator)\n",
     "            yield X1i[0], X1i[1]\n",
     "#             yield [X1i[0], X2i['area']], X1i[1]"
    ]
@@ -1842,12 +1818,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 7422 validated image filenames.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "59.41812339788883"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_CNN.evaluate_generator(load_multi_test_data(), steps=test_df.shape[0]/40)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model_CNN.evaluate_generator(load_multi_test_data(), steps=atest_df.shape[0]/40)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
