--- a/0808/multimodal.ipynb
+++ b/0808/multimodal.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,14 +445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 54.6 s\n"
+      "Wall time: 55.2 s\n"
      ]
     }
    ],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1123,28 +1123,28 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_7 (Conv2D)            (None, 596, 296, 64)      4864      \n",
+      "conv2d_13 (Conv2D)           (None, 598, 298, 128)     3584      \n",
       "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 594, 294, 32)      18464     \n",
+      "conv2d_14 (Conv2D)           (None, 596, 296, 64)      73792     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2 (None, 148, 73, 32)       0         \n",
+      "max_pooling2d_9 (MaxPooling2 (None, 298, 148, 64)      0         \n",
       "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 148, 73, 32)       0         \n",
+      "dropout_9 (Dropout)          (None, 298, 148, 64)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_9 (Conv2D)            (None, 144, 69, 32)       25632     \n",
+      "conv2d_15 (Conv2D)           (None, 296, 146, 32)      18464     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_6 (MaxPooling2 (None, 72, 34, 32)        0         \n",
+      "max_pooling2d_10 (MaxPooling (None, 148, 73, 32)       0         \n",
       "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 78336)             0         \n",
+      "flatten_5 (Flatten)          (None, 345728)            0         \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 32)                2506784   \n",
+      "dense_9 (Dense)              (None, 32)                11063328  \n",
       "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 32)                0         \n",
+      "dropout_10 (Dropout)         (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 1)                 33        \n",
+      "dense_10 (Dense)             (None, 1)                 33        \n",
       "=================================================================\n",
-      "Total params: 2,555,777\n",
-      "Trainable params: 2,555,777\n",
+      "Total params: 11,159,201\n",
+      "Trainable params: 11,159,201\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1152,11 +1152,11 @@
    ],
    "source": [
     "model_CNN = Sequential()\n",
-    "model_CNN.add(Conv2D(64, kernel_size=(3, 3), activation='relu', input_shape=img_size))\n",
-    "model_CNN.add(Conv2D(32, (3, 3), activation='relu'))\n",
-    "model_CNN.add(MaxPooling2D(pool_size=(4, 4)))\n",
+    "model_CNN.add(Conv2D(128, kernel_size=(3, 3), activation='relu', input_shape=img_size))\n",
+    "model_CNN.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "model_CNN.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model_CNN.add(Dropout(0.25))\n",
-    "model_CNN.add(Conv2D(32, (5, 5), activation='relu'))\n",
+    "model_CNN.add(Conv2D(32, (3, 3), activation='relu'))\n",
     "model_CNN.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model_CNN.add(Flatten())\n",
     "\n",
@@ -1166,6 +1166,86 @@
     "model_CNN.add(Dense(1, activation='relu'))\n",
     "\n",
     "model_CNN.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VGG16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_95 (Conv2D)           (None, 600, 300, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "conv2d_96 (Conv2D)           (None, 600, 300, 64)      36928     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_42 (MaxPooling (None, 300, 150, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_97 (Conv2D)           (None, 300, 150, 128)     73856     \n",
+      "_________________________________________________________________\n",
+      "conv2d_98 (Conv2D)           (None, 300, 150, 128)     147584    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_43 (MaxPooling (None, 150, 75, 128)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_99 (Conv2D)           (None, 150, 75, 256)      295168    \n",
+      "_________________________________________________________________\n",
+      "conv2d_100 (Conv2D)          (None, 150, 75, 256)      590080    \n",
+      "_________________________________________________________________\n",
+      "conv2d_101 (Conv2D)          (None, 150, 75, 256)      590080    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_44 (MaxPooling (None, 75, 37, 256)       0         \n",
+      "_________________________________________________________________\n",
+      "flatten_13 (Flatten)         (None, 710400)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_27 (Dense)             (None, 1000)              710401000 \n",
+      "_________________________________________________________________\n",
+      "dense_28 (Dense)             (None, 1)                 1001      \n",
+      "=================================================================\n",
+      "Total params: 712,137,489\n",
+      "Trainable params: 712,137,489\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_vgg = Sequential([\n",
+    "    Conv2D(64, (3, 3), input_shape=img_size, padding='same', activation='relu'),\n",
+    "    Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "    MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
+    "    Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
+    "    Conv2D(128, (3, 3), activation='relu', padding='same',),\n",
+    "    MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
+    "    Conv2D(256, (3, 3), activation='relu', padding='same',),\n",
+    "    Conv2D(256, (3, 3), activation='relu', padding='same',),\n",
+    "    Conv2D(256, (3, 3), activation='relu', padding='same',),\n",
+    "    MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
+    "#     Conv2D(512, (3, 3), activation='relu', padding='same',),\n",
+    "#     Conv2D(512, (3, 3), activation='relu', padding='same',),\n",
+    "#     Conv2D(512, (3, 3), activation='relu', padding='same',),\n",
+    "#     MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
+    "#     Conv2D(512, (3, 3), activation='relu', padding='same',),\n",
+    "#     Conv2D(512, (3, 3), activation='relu', padding='same',),\n",
+    "#     Conv2D(512, (3, 3), activation='relu', padding='same',),\n",
+    "#     MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
+    "    Flatten(),\n",
+    "    Dense(1000, activation='relu'),\n",
+    "    Dense(1, activation='relu')\n",
+    "])\n",
+    "\n",
+    "model_vgg.summary()"
    ]
   },
   {
@@ -1280,7 +1360,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "x = img_df['label'].values \n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "# https://stackoverflow.com/questions/25886116/sklearns-minmaxscaler-only-returns-zeros\n",
+    "x_scaled = min_max_scaler.fit_transform(x.reshape(-1, 1))\n",
+    "img_df['label'] = x_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1288,11 +1383,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "3608/3607 [==============================] - 347s 96ms/step - loss: 58.5456\n",
+      "3608/3607 [==============================] - 892s 247ms/step - loss: 58.6451\n",
       "Epoch 2/3\n",
-      "3608/3607 [==============================] - 347s 96ms/step - loss: 57.7714\n",
+      "3608/3607 [==============================] - 883s 245ms/step - loss: 57.3236\n",
       "Epoch 3/3\n",
-      "3608/3607 [==============================] - 346s 96ms/step - loss: 58.2046\n"
+      "3608/3607 [==============================] - 880s 244ms/step - loss: 57.1576\n"
      ]
     }
    ],
@@ -1300,6 +1395,16 @@
     "model_CNN.compile(loss='mean_absolute_percentage_error', optimizer='adam')\n",
     "# train_history = model_CNN.fit(x=img_data, y=label, validation_split=0.3, epochs=10, batch_size=10, verbose=0)\n",
     "train_history = model_CNN.fit_generator(train_generator, epochs=3, steps_per_epoch=img_df.shape[0]/ 40, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_vgg.compile(loss='mean_absolute_percentage_error', optimizer='adam')\n",
+    "train_history_vgg = model_vgg.fit_generator(train_generator, epochs=3, steps_per_epoch=img_df.shape[0]/ 40, verbose=1)"
    ]
   },
   {
@@ -1629,20 +1734,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
     "\n",
@@ -1840,6 +1934,34 @@
     }
    ],
    "source": [
+    "model_CNN.evaluate_generator(load_multi_test_data(), steps=test_df.shape[0]/40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 7422 validated image filenames.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "66.22745655155413"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 與 label經過 normalize做比較\n",
     "model_CNN.evaluate_generator(load_multi_test_data(), steps=test_df.shape[0]/40)"
    ]
   },
