hotels data EDA

--- a/0821/clean_hotel_data.ipynb
+++ b/0821/clean_hotel_data.ipynb
@@ -2,29 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "file_name = 'Hualien_tripadvisor_top1500'\n",
+    "file_name = 'Chiayi_tripadvisor_top500'\n",
     "df = pd.read_csv('../0815/'+file_name+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "190\n"
+      "84\n"
      ]
     }
    ],
    "source": [
+    "# 計算重複數量\n",
     "count = 0\n",
     "for i, value in df['uri'].value_counts().iteritems():\n",
     "    if value > 1:\n",
@@ -41,8 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -67,9 +80,14 @@
        "      <th></th>\n",
        "      <th>title</th>\n",
        "      <th>paiming</th>\n",
-       "      <th>recommend_price</th>\n",
        "      <th>uri</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>recommend_price</th>\n",
        "      <th>hotel_address</th>\n",
+       "      <th>hotel_star</th>\n",
+       "      <th>hotel_city</th>\n",
+       "      <th>hotel_section</th>\n",
        "      <th>price_range</th>\n",
        "      <th>avg_rating</th>\n",
        "      <th>comment_count</th>\n",
@@ -81,102 +99,128 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>267</th>\n",
-       "      <td>Small Travel Stay</td>\n",
-       "      <td>花蓮排名第 268 的超值住宿地點，共 2,231 家</td>\n",
-       "      <td>NT$1,247</td>\n",
+       "      <td>284</td>\n",
+       "      <td>砝傣岸民宿</td>\n",
+       "      <td>花蓮排名第 285 的超值住宿地點，共 2,231 家</td>\n",
        "      <td>https://www.tripadvisor.com.tw/Hotel_Review-g1...</td>\n",
-       "      <td>No.13-1, Xuanyuan Rd.</td>\n",
-       "      <td>NT$1,285 - NT$1,818</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>23.659290</td>\n",
+       "      <td>121.419960</td>\n",
+       "      <td>NT$1,212</td>\n",
+       "      <td>光復鄉大進村中興路176巷1弄2號</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>花蓮</td>\n",
+       "      <td>光復鄉</td>\n",
+       "      <td>-NT$1</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>https://media-cdn.tripadvisor.com/media/photo-...</td>\n",
+       "      <td>https://media-cdn.tripadvisor.com/media/partne...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NT$2,174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>305</td>\n",
+       "      <td>砝傣岸民宿</td>\n",
+       "      <td>花蓮排名第 306 的超值住宿地點，共 2,231 家</td>\n",
+       "      <td>https://www.tripadvisor.com.tw/Hotel_Review-g1...</td>\n",
+       "      <td>23.328011</td>\n",
+       "      <td>121.321114</td>\n",
+       "      <td>NT$1,212</td>\n",
+       "      <td>光復鄉大進村中興路176巷1弄2號</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>花蓮</td>\n",
+       "      <td>光復鄉</td>\n",
+       "      <td>-NT$1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>https://static.tacdn.com/img2/branding/rebrand...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>418</th>\n",
-       "      <td>Small Travel Stay</td>\n",
-       "      <td>花蓮排名第 419 的超值住宿地點，共 2,231 家</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>346</td>\n",
+       "      <td>砝傣岸民宿</td>\n",
+       "      <td>花蓮排名第 347 的超值住宿地點，共 2,231 家</td>\n",
        "      <td>https://www.tripadvisor.com.tw/Hotel_Review-g1...</td>\n",
-       "      <td>No.13-1, Xuanyuan Rd.</td>\n",
-       "      <td>NT$1,285 - NT$1,818</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>23.972549</td>\n",
+       "      <td>121.614670</td>\n",
+       "      <td>NT$1,212</td>\n",
+       "      <td>光復鄉大進村中興路176巷1弄2號</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>花蓮</td>\n",
+       "      <td>光復鄉</td>\n",
+       "      <td>-NT$1</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>https://media-cdn.tripadvisor.com/media/photo-...</td>\n",
+       "      <td>https://media-cdn.tripadvisor.com/media/partne...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>486</th>\n",
-       "      <td>Small Travel Stay</td>\n",
-       "      <td>花蓮排名第 487 的超值住宿地點，共 2,231 家</td>\n",
-       "      <td>NT$952</td>\n",
+       "      <td>366</td>\n",
+       "      <td>砝傣岸民宿</td>\n",
+       "      <td>花蓮排名第 367 的超值住宿地點，共 2,231 家</td>\n",
        "      <td>https://www.tripadvisor.com.tw/Hotel_Review-g1...</td>\n",
-       "      <td>No.13-1, Xuanyuan Rd.</td>\n",
-       "      <td>NT$1,285 - NT$1,818</td>\n",
+       "      <td>24.181171</td>\n",
+       "      <td>121.494217</td>\n",
+       "      <td>NT$1,212</td>\n",
+       "      <td>光復鄉大進村中興路176巷1弄2號</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>花蓮</td>\n",
+       "      <td>光復鄉</td>\n",
+       "      <td>-NT$1</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>https://media-cdn.tripadvisor.com/media/photo-...</td>\n",
+       "      <td>https://media-cdn.tripadvisor.com/media/partne...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NT$952</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1129</th>\n",
-       "      <td>Small Travel Stay</td>\n",
-       "      <td>花蓮排名第 1,130 的超值住宿地點，共 2,231 家</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.tripadvisor.com.tw/Hotel_Review-g1...</td>\n",
-       "      <td>No.13-1, Xuanyuan Rd.</td>\n",
-       "      <td>NT$1,285 - NT$1,818</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>https://media-cdn.tripadvisor.com/media/photo-...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NT$9,046</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  title                        paiming recommend_price  \\\n",
-       "267   Small Travel Stay    花蓮排名第 268 的超值住宿地點，共 2,231 家        NT$1,247   \n",
-       "418   Small Travel Stay    花蓮排名第 419 的超值住宿地點，共 2,231 家             NaN   \n",
-       "486   Small Travel Stay    花蓮排名第 487 的超值住宿地點，共 2,231 家          NT$952   \n",
-       "1129  Small Travel Stay  花蓮排名第 1,130 的超值住宿地點，共 2,231 家             NaN   \n",
+       "      title                      paiming  \\\n",
+       "284  砝傣岸民宿   花蓮排名第 285 的超值住宿地點，共 2,231 家   \n",
+       "305  砝傣岸民宿   花蓮排名第 306 的超值住宿地點，共 2,231 家   \n",
+       "346  砝傣岸民宿   花蓮排名第 347 的超值住宿地點，共 2,231 家   \n",
+       "366  砝傣岸民宿   花蓮排名第 367 的超值住宿地點，共 2,231 家   \n",
        "\n",
-       "                                                    uri  \\\n",
-       "267   https://www.tripadvisor.com.tw/Hotel_Review-g1...   \n",
-       "418   https://www.tripadvisor.com.tw/Hotel_Review-g1...   \n",
-       "486   https://www.tripadvisor.com.tw/Hotel_Review-g1...   \n",
-       "1129  https://www.tripadvisor.com.tw/Hotel_Review-g1...   \n",
+       "                                                   uri        lat         lng  \\\n",
+       "284  https://www.tripadvisor.com.tw/Hotel_Review-g1...  23.659290  121.419960   \n",
+       "305  https://www.tripadvisor.com.tw/Hotel_Review-g1...  23.328011  121.321114   \n",
+       "346  https://www.tripadvisor.com.tw/Hotel_Review-g1...  23.972549  121.614670   \n",
+       "366  https://www.tripadvisor.com.tw/Hotel_Review-g1...  24.181171  121.494217   \n",
        "\n",
-       "              hotel_address          price_range  avg_rating  comment_count  \\\n",
-       "267   No.13-1, Xuanyuan Rd.  NT$1,285 - NT$1,818         5.0            1.0   \n",
-       "418   No.13-1, Xuanyuan Rd.  NT$1,285 - NT$1,818         5.0            1.0   \n",
-       "486   No.13-1, Xuanyuan Rd.  NT$1,285 - NT$1,818         5.0            1.0   \n",
-       "1129  No.13-1, Xuanyuan Rd.  NT$1,285 - NT$1,818         5.0            1.0   \n",
+       "    recommend_price       hotel_address  hotel_star hotel_city hotel_section  \\\n",
+       "284        NT$1,212  光復鄉大進村中興路176巷1弄2號          3.5         花蓮           光復鄉   \n",
+       "305        NT$1,212  光復鄉大進村中興路176巷1弄2號          3.5         花蓮           光復鄉   \n",
+       "346        NT$1,212  光復鄉大進村中興路176巷1弄2號          3.5         花蓮           光復鄉   \n",
+       "366        NT$1,212  光復鄉大進村中興路176巷1弄2號          5.0         花蓮           光復鄉   \n",
        "\n",
-       "                                        offical_img_uri facility room  \\\n",
-       "267   https://media-cdn.tripadvisor.com/media/photo-...      NaN  NaN   \n",
-       "418   https://media-cdn.tripadvisor.com/media/photo-...      NaN  NaN   \n",
-       "486   https://media-cdn.tripadvisor.com/media/photo-...      NaN  NaN   \n",
-       "1129  https://media-cdn.tripadvisor.com/media/photo-...      NaN  NaN   \n",
+       "    price_range  avg_rating  comment_count  \\\n",
+       "284       -NT$1         4.0            1.0   \n",
+       "305       -NT$1         4.0            1.0   \n",
+       "346       -NT$1         4.0            1.0   \n",
+       "366       -NT$1         4.0            1.0   \n",
        "\n",
-       "     agoda_price  \n",
-       "267          NaN  \n",
-       "418          NaN  \n",
-       "486       NT$952  \n",
-       "1129         NaN  "
+       "                                       offical_img_uri facility room  \\\n",
+       "284  https://media-cdn.tripadvisor.com/media/partne...      NaN  NaN   \n",
+       "305  https://static.tacdn.com/img2/branding/rebrand...      NaN  NaN   \n",
+       "346  https://media-cdn.tripadvisor.com/media/partne...      NaN  NaN   \n",
+       "366  https://media-cdn.tripadvisor.com/media/partne...      NaN  NaN   \n",
+       "\n",
+       "    agoda_price  \n",
+       "284    NT$2,174  \n",
+       "305         NaN  \n",
+       "346         NaN  \n",
+       "366    NT$9,046  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,8 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -225,7 +275,7 @@
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,30 +328,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "title              0.000000\n",
-       "recommend_price    0.441880\n",
        "uri                0.000000\n",
+       "lat                0.191919\n",
+       "lng                0.191919\n",
+       "recommend_price    0.181818\n",
        "hotel_address      0.000000\n",
-       "price_range        0.099145\n",
+       "hotel_star         0.090909\n",
+       "hotel_city         0.000000\n",
+       "hotel_section      0.000000\n",
+       "price_range        0.131313\n",
        "avg_rating         0.000000\n",
        "comment_count      0.000000\n",
-       "facility           0.445299\n",
-       "room               0.583761\n",
-       "agoda_price        0.652991\n",
+       "facility           0.383838\n",
+       "room               0.363636\n",
+       "agoda_price        0.848485\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -327,20 +378,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 48 entries, 28 to 945\n",
-      "Data columns (total 10 columns):\n",
-      "title              48 non-null object\n",
-      "recommend_price    48 non-null object\n",
-      "uri                48 non-null object\n",
-      "hotel_address      48 non-null object\n",
-      "price_range        48 non-null object\n",
-      "avg_rating         48 non-null float64\n",
-      "comment_count      48 non-null float64\n",
-      "facility           48 non-null object\n",
-      "room               48 non-null object\n",
-      "agoda_price        48 non-null object\n",
-      "dtypes: float64(2), object(8)\n",
-      "memory usage: 4.1+ KB\n"
+      "Int64Index: 41 entries, 5 to 468\n",
+      "Data columns (total 15 columns):\n",
+      "title              41 non-null object\n",
+      "uri                41 non-null object\n",
+      "lat                41 non-null float64\n",
+      "lng                41 non-null float64\n",
+      "recommend_price    41 non-null object\n",
+      "hotel_address      41 non-null object\n",
+      "hotel_star         41 non-null float64\n",
+      "hotel_city         41 non-null object\n",
+      "hotel_section      41 non-null object\n",
+      "price_range        41 non-null object\n",
+      "avg_rating         41 non-null float64\n",
+      "comment_count      41 non-null float64\n",
+      "facility           41 non-null object\n",
+      "room               41 non-null object\n",
+      "agoda_price        41 non-null object\n",
+      "dtypes: float64(5), object(10)\n",
+      "memory usage: 5.1+ KB\n"
      ]
     }
    ],
@@ -350,23 +406,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 948 entries, 0 to 947\n",
-      "Data columns (total 5 columns):\n",
-      "title            948 non-null object\n",
-      "uri              948 non-null object\n",
-      "hotel_address    948 non-null object\n",
-      "avg_rating       948 non-null float64\n",
-      "comment_count    948 non-null float64\n",
-      "dtypes: float64(2), object(3)\n",
-      "memory usage: 37.2+ KB\n"
+      "RangeIndex: 477 entries, 0 to 476\n",
+      "Data columns (total 7 columns):\n",
+      "title            477 non-null object\n",
+      "uri              477 non-null object\n",
+      "hotel_address    477 non-null object\n",
+      "hotel_city       477 non-null object\n",
+      "hotel_section    477 non-null object\n",
+      "avg_rating       477 non-null float64\n",
+      "comment_count    477 non-null float64\n",
+      "dtypes: float64(2), object(5)\n",
+      "memory usage: 26.2+ KB\n"
      ]
     }
    ],
@@ -383,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -407,16 +471,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 832 entries, 0 to 947\n",
-      "Data columns (total 6 columns):\n",
-      "title            832 non-null object\n",
-      "uri              832 non-null object\n",
-      "hotel_address    832 non-null object\n",
-      "price_range      832 non-null object\n",
-      "avg_rating       832 non-null float64\n",
-      "comment_count    832 non-null float64\n",
-      "dtypes: float64(2), object(4)\n",
-      "memory usage: 45.5+ KB\n",
+      "Int64Index: 71 entries, 1 to 97\n",
+      "Data columns (total 11 columns):\n",
+      "title            71 non-null object\n",
+      "uri              71 non-null object\n",
+      "lat              71 non-null float64\n",
+      "lng              71 non-null float64\n",
+      "hotel_address    71 non-null object\n",
+      "hotel_star       71 non-null float64\n",
+      "hotel_city       71 non-null object\n",
+      "hotel_section    71 non-null object\n",
+      "price_range      71 non-null object\n",
+      "avg_rating       71 non-null float64\n",
+      "comment_count    71 non-null float64\n",
+      "dtypes: float64(5), object(6)\n",
+      "memory usage: 6.7+ KB\n",
       "None\n"
      ]
     }
@@ -435,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
